examples/ill_formed/ill_formed.xpln
fun fun(fun)
    return fun;
endf;

foo := 5;
and := 3;

if and == 3
    output foo;
endi;

else and == 5
    output foo;
endi;

return return;
